# ProyectoDeimos2

./: .gitignore  ArbolEstructura.h  CMakeCache.txt.prev  CMakeLists.txt  CMakeLists.txt.autosave  CMakeLists.txt.user.3e6ad8b  CMakeLists.txt.user.fa4950b  Makefile  ObjetosYColisiones.cpp  ObjetosYColisiones.h  SpriteSheetLoader.h  bringerofdeath.cpp  bringerofdeath.h  bullet.cpp  bullet.h  cannon.cpp  cannon.h  carnivore.cpp  carnivore.h  ciudadinversa.cpp  ciudadinversa.h  clickablelabel.cpp  cmake_install.cmake  colatareas.cpp  colatareas.h  combatemanager.cpp  combatemanager.h  componentefisico.cpp  componentefisico.h  componentesalud.cpp  componentesalud.h  demon.cpp  demon.h  drop.cpp  drop.h  enemigo.cpp  enemigo.h  entidad.cpp  entidad.h  fireball.cpp  (+64 more)
.cmake/api/v1/reply/: cmakeFiles-v1-0b183aca03979886a157.json  codemodel-v2-1610e10fbe374a062af3.json  codemodel-v2-5dd24e1e49f7f4993004.json  codemodel-v2-61a5eb083f369570c4c3.json  codemodel-v2-82ea878520af82f75e86.json  codemodel-v2-bfb09fffbaf9ad95542b.json  codemodel-v2-c11f49e551d758e0d125.json  codemodel-v2-f234b40b5cb972bd45cd.json  directory-.-Debug-16a7b7ce056627b2d8ff.json  directory-.-Debug-4e10f04e87cc52fe2e3f.json  directory-.-Debug-b29c9e4887eefa082a50.json  directory-.-Debug-b34c16b3f46f91ccc951.json  directory-.-RelWithDebInfo-a7ffe3d3cc7d2ea9ee9f.json  index-2025-06-09T02-12-55-0833.json  index-2025-06-12T13-27-42-0167.json  index-2025-06-14T22-18-51-0700.json  index-2025-06-15T01-15-22-0030.json  index-2025-06-15T06-34-11-0081.json  target-ProyectDeimos2-Debug-5e0d9c00de3918a32778.json  target-ProyectDeimos2-Debug-7e2539e2ac671adbc3c6.json  target-ProyectDeimos2-Debug-b772ca753b8f204d669b.json  target-ProyectDeimos2-Debug-d9c33713087f63e8ae8a.json  target-ProyectDeimos2-Debug-e3ba8e03b4420e3635c0.json  target-ProyectDeimos2_autogen-Debug-b06b53cc1638210cdba1.json  target-ProyectDeimos2_autogen_timestamp_deps-Debug-4386107d9c7a7cc86509.json
.cmake/api/v1/reply.prev/: cache-v2-007fc001dac69b418bbd.json  cmakeFiles-v1-96f6ca2eb2339eae51ca.json  codemodel-v2-2d6dd1effb7196867745.json  codemodel-v2-3e3fa43f3fab2bc17de6.json  codemodel-v2-a40c3ca527e48f0c22e5.json  codemodel-v2-e347ef05b4d1f476f1d8.json  directory-.-Debug-a47d904fb589ec99f337.json  directory-.-Debug-b515a5e3507d646952d2.json  directory-.-Debug-fd383b002c16de031a36.json  directory-.-RelWithDebInfo-d8adbe8fad3fff3ad160.json  index-2025-06-08T22-19-04-0737.json  index-2025-06-09T07-19-54-0966.json  index-2025-06-12T04-02-17-0474.json  index-2025-06-15T00-03-25-0711.json  index-2025-06-15T01-30-54-0978.json  target-ProyectDeimos2-Debug-3082086f0c397ab0155e.json  target-ProyectDeimos2-Debug-79b1ff8a922c9734a8f4.json  target-ProyectDeimos2-Debug-856a2b26cf645bf38143.json  target-ProyectDeimos2-Debug-a68a43f45b7f29c0d09e.json
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
ProyectDeimos2.app/Contents/: Info.plist
ProyectDeimos2_autogen/: deps  mocs_compilation.cpp
ProyectDeimos2_autogen/EWIEGA46WW/: moc_ObjetosYColisiones.cpp  moc_ObjetosYColisiones.cpp.d  moc_bringerofdeath.cpp  moc_bringerofdeath.cpp.d  moc_carnivore.cpp  moc_carnivore.cpp.d  moc_ciudadinversa.cpp  moc_ciudadinversa.cpp.d  moc_clickablelabel.cpp  moc_clickablelabel.cpp.d  moc_combatemanager.cpp  moc_combatemanager.cpp.d  moc_enemigo.cpp  moc_enemigo.cpp.d  moc_mainwindow.cpp.d  moc_mapawidget.cpp  moc_mapawidget.cpp.d  moc_menuopciones.cpp  moc_menuopciones.cpp.d  moc_minotaur.cpp  moc_monsterfly.cpp  moc_monsterfly.cpp.d  moc_mutantworm.cpp  moc_mutantworm.cpp.d  moc_nivelraicesolvidadas.cpp  moc_nivelraicesolvidadas.cpp.d  moc_niveltorredelamarca.cpp  moc_niveltorredelamarca.cpp.d  moc_pantallacarga.cpp  moc_pantallacarga.cpp.d  moc_pantallainicio.cpp  moc_pantallainicio.cpp.d  moc_skeleton.cpp  moc_skeleton.cpp.d  moc_tutorialscene.cpp  moc_tutorialscene.cpp.d  moc_videointro.cpp  moc_videointro.cpp.d
